# django-simple-backups

./: .gitignore  MANIFEST.in  README.md  license  readme.md  setup.cfg
backups/: apps.py
backups/management/commands/: backupdatabase.py  backupmedia.py
